styled sections 1 and 2

--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,212 @@ header a {
     font-size: 0.9rem;
     font-family: var(--Google-Font);
 }
+
+.navbar .navbar-nav .dropdown .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.navbar .navbar-nav .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.navbar .navbar-nav .dropdown-content a {
+    color: black;
+    padding: 12px 12px;
+    text-decoration: none;
+    display: block;
+    width: 0.5rem;
+}
+
+.navbar .navbar-nav .dropdown-content a:hover {
+    background-color: #dddddd;
+}
+
+.navbar .navbar-nav .nav-item {
+    padding: 1rem;
+}
+
+.navbar .navbar-nav .nav-item:last-child {
+    padding-right: 1rem;
+}
+
+.navbar .navbar-brand {
+    padding-left: 1rem;
+}
+
+header .navbar .nav-link:hover {
+    color: black;
+}
+
+/* author heading */
+header .row .col-md-7 h6 {
+    padding: 0.2rem;
+    letter-spacing: 0.3rem;
+}
+
+/* author heading text */
+header .row .col-md-7 h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    letter-spacing: 0.3rem;
+}
+
+/* author heading text */
+header .row .col-md-7 p {
+    padding: 0.5rem 1rem;
+}
+
+/* heading button */
+header .row .col-md-7 button {
+    border-radius: 2rem;
+    font-weight: bold;
+}
+
+header .row .col-md-7 {
+    color: white;
+    font-family: var(--Rubik);
+    padding: 22vmin 1vmin;
+}
+
+header .row .col-md-5 {
+    padding: 4.2vmin 1vmin;
+}
+
+/* image in the header */
+header .row .col-md-5 img {
+    width: 90%;
+}
+
+/* Section 1 with image and "John Doe" text */
+.section-1 {
+    padding: 2rem 0;
+}
+
+/* div with image */
+.section-1 .row .col-md-6 .pray img {
+    opacity: 0.7;
+    width: 80%;
+    border-radius: 0.2rem;
+}
+
+.section-1 .row .col-md-6:last-child {
+    position: relative;
+}
+
+.section-1 .row .col-md-6 .panel {
+    position: absolute;
+    padding: 1.2rem 2.4rem;
+    text-align: left;
+    top: 4rem;
+    box-shadow: 0 25px 42px rgba(0, 0, 0, 0.2);
+    z-index: 3;
+}
+
+/* Section 2 */
+/* div with "We Are Ready For You" heading and p below */
+.section-2 .cover {
+    position: relative;
+    width: 100%;
+    height: 26rem;
+    background: url("../assets/images/pexels-photo-452738.jpeg");
+    background-position: -30rem -22rem;
+    background-size: 150%;
+}
+
+.section-2 .cover .content {
+    height: 100%;
+    width: 100%;
+    padding-top: 8rem;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.section-2 .cover .content h1 {
+    color: whitesmoke;
+    font-family: var(--Patua);
+    font-size: 3rem;
+}
+
+.section-2 .cover .content p {
+    color: whitesmoke;
+    font-family: var(--Rubik);
+    font-size: 1rem;
+}
+
+/* div with number boxes */
+.section-2 .number-boxes .rectangle {
+    position: relative;
+    z-index: 1;
+    background: white;
+    width: 17rem;
+    height: 12rem;
+    padding-top: 1rem;
+    margin: 1rem;
+    border-radius: 0.5rem;
+    box-shadow: 1px 2px 50px 0 rgba(255, 0, 0, 0.349);
+}
+
+.section-2 .number-boxes {
+    margin-top: -8rem;
+}
+
+.section-2 .number-boxes .rectangle h1 {
+    font-size: 5rem;
+    color: tomato;
+}
+
+.section-2 .number-boxes .rectangle p {
+    font-family: var(--Patua);
+}
+
+/* purchase div */
+.section-2 .purchase > h1 {
+    padding-top: 2.2rem;
+    padding-bottom: 0;
+    font-family: var(--Lobster);
+}
+
+.section-2 .purchase > p {
+    color: var(--light-black);
+    font-size: 1rem;
+    padding-bottom: 2rem;
+}
+
+/* book cards */
+.section-2 .purchase .cards .card {
+    padding: 0.1rem 0.1rem;
+    width: 16rem;
+    margin: 0.1rem;
+}
+
+.section-2 .purchase .cards {
+    padding: 0;
+    margin: 0;
+}
+
+.section-2 .purchase .cards .card .title {
+    background: rgba(208, 241, 241, 0.199);
+    padding: 0.4rem 2.5rem;
+}
+
+.section-2 .purchase .cards .card .card-text {
+    padding: 0.5rem 1rem;
+    color: var(--light-black);
+}
+
+.section-2 .purchase .cards .card .card-body .pricing {
+    background: rgba(208, 241, 241, 0.199);
+    border-top-right-radius: 170px;
+    border-top-left-radius: 170px;
+}
+
+.section-2 .purchase .cards .card .card-body .pricing h1 {
+    font-size: 2rem;
+    padding: 1rem 0.5rem;
+}
+
+/* Section 3 with "Download..." text */
