--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ header, section {
 header a {
     color: whitesmoke;
     font-size: 0.9rem;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
     font-family: var(--Google-Font);
 }
 
@@ -310,6 +312,11 @@ footer {
     padding: 1.5rem;
 }
 
+footer .row .col-md-5, .col-md-2 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
 footer form input::placeholder {
     color: whitesmoke !important;
 }
@@ -317,6 +324,20 @@ footer form input::placeholder {
 footer form .input-group-prepend .input-group-text {
     background: var(--bg-gradient);
     border: none;
+}
+
+footer .col-md-2 .column i {
+    color: whitesmoke;
+    padding: 0 0.5rem;
+
+}
+
+footer .col-md-2 .column i:hover {
+    color: #2e72ea;
+}
+
+footer .col-md-2 .column {
+    margin-left: -0.4rem;
 }
 
 
